--- a/node_pie/node_def_files/builtin/GeometryNodeTree_1_0.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_1_0.jsonc
@@ -132,7 +132,7 @@
         { "identifier": "GeometryNodeSubdivideCurve" },
         { "identifier": "GeometryNodeTrimCurve" },
         { "separator": true, "label": "Read" },
-        { "identifier": "GeometryNodeCurveLength", "color": "input" },
+        { "identifier": "GeometryNodeCurveLength", "color": "geometry" },
         {
           "identifier": "GeometryNodeInputCurveHandlePositions",
           "color": "input"
