--- a/node_pie/node_def_files/builtin/GeometryNodeTree_rearrange.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_rearrange.jsonc
@@ -2,8 +2,9 @@
 // Tons of new nodes, including new import and grease pencil categories.
 {
   "enable": true,
-  // "enable": true,
+  // Apply after all other files
   "apply_after": true,
+  // Start layout from scratch
   "reset_layout": true,
   "additions": {
     "layout": {
