--- a/node_pie/node_def_files/builtin/ShaderNodeTree_4_5.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree_4_5.jsonc
@@ -4,7 +4,11 @@
     "categories": {
       "SHADER": {
         "nodes": [
-          { "identifier": "ShaderNodeVolumeCoefficients", "after_node": "ShaderNodeVolumeAbsorption", "poll_type": "is_not_world" },
+          {
+            "identifier": "ShaderNodeVolumeCoefficients",
+            "after_node": "ShaderNodeVolumeAbsorption",
+            "poll_type": "is_not_world"
+          }
         ]
       }
     }
