--- a/node_pie/node_def_files/builtin/CompositorNodeTree_4_5.jsonc
+++ b/node_pie/node_def_files/builtin/CompositorNodeTree_4_5.jsonc
@@ -122,7 +122,7 @@
         ]
       },
       "VECTOR": {
-        "nodes": [{ "identifier": "ShaderNodeVectorCurve" }, { "identifier": "ShaderNodeVectorRotate" }]
+        "nodes": [{ "identifier": "ShaderNodeVectorCurve" }, {"identifier": "ShaderNodeVectorMath"}, { "identifier": "ShaderNodeVectorRotate" }]
       }
     }
   }
