progress on adding 5.0 geo nodes

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
@@ -24,12 +24,16 @@
             "before_node": "GeometryNodeObjectInfo"
           },
           {
-            "identifier": "GeometryNodeWarning",
-            "after_node": "FunctionNodeInputVector"
-          },
-          {
             "identifier": "GeometryNodeToolActiveElement",
             "after_node": "GeometryNodeTool3DCursor"
+          }
+        ]
+      },
+      "LAYOUT": {
+        "nodes": [
+          {
+            "identifier": "GeometryNodeWarning",
+            // "after_node": "FunctionNodeInputVector"
           }
         ]
       },
